    fix a case where importfeed downloaded a partial feed from such a server.
  * importfeed: When there's a problem parsing the feed, --debug will
    output the feed content that was downloaded.
  * init: Fix a reversion in the last release that prevented automatically
    generating and setting a description for the repository.

 -- Joey Hess <id@joeyh.name>  Sat, 15 Jun 2019 12:38:25 -0400

git-annex (7.20190615) upstream; urgency=medium

  * Fixed bug that caused git-annex to fail to add a file when another
    git-annex process cleaned up the temp directory it was using.
  * Makefile: Added install-completions to install target.
  * Added the ability to run one job per CPU (core), by setting
    annex.jobs=cpus, or using option --jobs=cpus or -Jcpus.
  * Honor preferred content of a special remote when exporting trees to it;
    unwanted files are filtered out of the tree that is exported.
  * Importing from a special remote honors its preferred content too;
    unwanted files are not imported. But, some preferred content
    expressions can't be checked before files are imported, and trying to
    import with such an expression will fail.
  * Don't try to import .git directories from special remotes, because
    git does not support storing git repositories inside a git repository.
  * Improve shape of commit tree when importing from unversioned special
    remotes.
  * init: When the repository already has a description, don't change it.
  * describe: When run with no description parameter it used to set
    the description to "", now it will error out.
  * Android: Improve installation process when the user's login shell is not
    bash.
  * When a remote is configured to be readonly, don't allow changing
    what's exported to it.
  * Renamed annex.security.allowed-http-addresses to
    annex.security.allowed-ip-addresses because it is not really specific
    to the http protocol, also limiting eg, git-annex's use of ftp.