@@ -3,3 +3,5 @@ ATM there is no `--json-progress` in `git annex add` (only `--json`), so no feed
 Cheers!
 
 [[!meta author=yoh]]
+
+> [[done]] --[[Joey]]
