@@ -14,6 +14,8 @@ git-annex (7.20190616) UNRELEASED; urgency=medium
     output the feed content that was downloaded.
   * init: Fix a reversion in the last release that prevented automatically
     generating and setting a description for the repository.
+  * add: Display progress meter when hashing files.
+  * add: Support --json-progress option.
 
  -- Joey Hess <id@joeyh.name>  Sat, 15 Jun 2019 12:38:25 -0400
 
